@@ -15,9 +15,12 @@ classdef Shell < ads.fe.Element
     methods
         function obj = Shell(G1,Mat,Thickness)
             arguments
-                G1 (4,1) ads.fe.Point
+                G1 (:,1) ads.fe.Point
                 Mat ads.fe.Material 
                 Thickness double
+            end
+            if ~(length(G1) == 3 || length(G1) == 4)
+                error('SHELL: G1 must be a 3×1 (CTRIA3) or 4×1 (CQUAD4) array of ads.fe.Point.');
             end
             obj.G1=G1;
             obj.Mat = Mat;
@@ -37,13 +40,27 @@ classdef Shell < ads.fe.Element
         end
         function Export(obj,fid)
             if ~isempty(obj)
-                % print CBEAM elements
+                % print CQUAD4 elements
                 mni.printing.bdf.writeComment(fid,"CQUAD4: Defines a QUADRILATERAL element.");
                 mni.printing.bdf.writeColumnDelimiter(fid,"short")
                 for i = 1:length(obj)
-                    tmpCard = mni.printing.cards.CQUAD4(obj(i).EID,obj(i).PID,obj(i).G1);
-                    tmpCard.writeToFile(fid);
+                    if length([obj(i).G1.ID]) == 4
+                        tmpCard = mni.printing.cards.CQUAD4(obj(i).EID,obj(i).PID,[obj(i).G1.ID]); % bug here
+                        tmpCard.writeToFile(fid);
+                    end
                 end
+
+                % print CTRIA3 elements
+                mni.printing.bdf.writeComment(fid,"CTRIA3: Defines a TRIANGLE element.");
+                mni.printing.bdf.writeColumnDelimiter(fid,"short")
+                for i = 1:length(obj)
+                    if length([obj(i).G1.ID]) == 3
+                        tmpCard = mni.printing.cards.CTRIA3(obj(i).EID,obj(i).PID,[obj(i).G1.ID]);
+                        tmpCard.writeToFile(fid);
+                    end
+                end
+
+                
                 % print PBEAM elements
                 mni.printing.bdf.writeComment(fid,"PSHELL : Defines the properties of a SHELL element.");
                 mni.printing.bdf.writeColumnDelimiter(fid,"long")
